<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sv_alert_dialog_record_edit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CalendarView
            android:id="@+id/calendarEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/et_time_recordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:typeface="monospace"
            mask:allowed_chars="1234567890"
            mask:mask="##:##:##:###"
            android:hint="hhmmssccc"
            app:keep_hint="true" />

        <EditText
            android:id="@+id/et_distance_recordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="15"
            android:hint="@string/et_distance_hint"
            android:inputType="numberDecimal" />
    </LinearLayout>
</ScrollView>
