<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.komnacki.sportresultstracker.recordsActivity.RecordsListActivity"
    tools:showIn="@layout/activity_records_list">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recordsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:listitem="@layout/item_sports_list">
    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/empty_recordList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ic_empty_sportsList"
            android:layout_width="@dimen/ic_emptyList"
            android:layout_height="@dimen/ic_emptyList"
            android:layout_centerInParent="true"
            android:contentDescription="@string/empty_sportsList_contentDescription"
            android:src="@drawable/ic_empty_list_light" />

        <TextView
            android:id="@+id/tv_empty_recordList"
            style="@style/font_emptyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ic_empty_sportsList"
            android:text="@string/empty_recordsList" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
